--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -5,6 +5,8 @@
 	<title><?php echo $title ?> - TenBrain - Save your Brain, While saving Money!</title>
 	<?php echo $this->headLink()->appendStylesheet('/css/main.css') ?>
 	<?php echo $this->headLink()->appendStylesheet('/css/account.css') ?>
+	<?php echo $this->headScript()->appendFile('/js/jquery-1.4.4.min.js', $type = 'text/javascript') ?>
+	<?php echo $this->headScript()->appendFile('/js/main.js', $type = 'text/javascript') ?>
 	
 </head>
 <body>
@@ -69,6 +71,17 @@
 	
 	
 	<div class="main small_content">
+		<p class="selection_message wide">Choose one of the options below:</p>
+		<div class="selections">
+		<?php foreach($this->selections as $class => $data): ?>
+			<a class="selection_item<?php echo $data['disabled'] ? ' disabled' : '' ?>"
+				href="<?php echo $this->baseUrl() . ($data['disabled'] ? 'apology' : $next . '/' . $class) ?>">
+				<span class="selection_image <?php echo $this->type . ' ' . $class ?>">.</span>
+				<span class="control selection_button <?php echo $data['type'] ?>"><?php echo $data['text'] ?></span>
+			</a>
+		<?php endforeach; ?>
+		</div>
+		<div class="clearfix"></div>
 	</div>
 	
 	<div id="helper">
@@ -92,9 +105,9 @@
 		</div>
 		
 		<div id="menu">
-			<a class="item" href="<?php echo base_url() ?>about">About us</a>
-			<a class="item" href="<?php echo base_url() ?>about">Item 2</a>
-			<a class="item" href="<?php echo base_url() ?>about">Item 3</a>
+			<a class="item" href="<?php echo $this->baseUrl() ?>about">About us</a>
+			<a class="item" href="<?php echo $this->baseUrl() ?>about">Item 2</a>
+			<a class="item" href="<?php echo $this->baseUrl() ?>about">Item 3</a>
 		</div>
 	</div>
 </div> <!-- end container -->
