--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -14,32 +14,33 @@
 <div class="main big_content">
 	<div class="reg_form">
 		<h2>Sign In</h2>
-		<form action="/auth/login" method="post" accept-charset="utf-8" class="account_form signin">			
+		<form action="" method="post" accept-charset="utf-8" class="account_form signin">			
 			<h3>Sign in with your TenBrain Account</h3>
-				<p class="input_wrapper">
-					<label for="sign_in_username_email">Username/Email</label>				
-					<input type="text" name="sign_in_username_email" value="" id="sign_in_username_email" class="control input" maxlength="24"  />					
-					<p class="input_wrapper center account_error"></p>
-				</p>
 
 				<p class="input_wrapper">
-					<label for="sign_in_password">Password</label>				
-					<input type="password" name="sign_in_password" value="" id="sign_in_password" class="control input"  />
+					<label for="username">Username/Email</label>				
+					<?php echo $this->form->username; ?>
+				</p>
+				
+				<p class="input_wrapper">
+					<label for="password">Password</label>				
+					<?php echo $this->form->password; ?>
 				</p>
 
 				<p class="input_wrapper center account_error"></p>
 				
 				<p class="input_wrapper">
-					<input type="checkbox" name="sign_in_remember" value="checked" id="sign_in_remember" class="checkbox"  />				<label for="sign_in_remember">Remember me</label>				
-					<button name="" type="submit" class="login_submit underlined_dash" >Sign In</button>			
+					<?php echo $this->form->remember; ?>				
+					<label for="remember">Remember me</label>
+					<?php echo $this->form->submit; ?>			
 				</p>
 				
 				<p class="input_wrapper center">
-					<a href="http://alpha.tenbrain.com/account/forgot_password" class="blue underlined_dash">Forgot your password?</a>			
+					<a href="/auth/forgot" class="blue underlined_dash">Forgot your password?</a>			
 				</p>
 				
 				<p class="input_wrapper center">
-					Don't have an account? <a href="http://alpha.tenbrain.com/account/sign_up" class="blue underlined_dash">Sign up now</a>			
+					Don't have an account? <a href="/auth/register" class="blue underlined_dash">Sign up now</a>			
 				</p>
 
 		</form>	
