--- a/application/views/scripts/auth/register.phtml
+++ b/application/views/scripts/auth/register.phtml
@@ -16,41 +16,40 @@
 		<div class="reg_form">
 			<h2>Sign Up</h2>
 			<h3>Create your TenBrain Account</h3>
-			<form action="/auth/register" method="post" accept-charset="utf-8" class="account_form signup">
+			<form action="" method="post" accept-charset="utf-8" class="account_form signup">
 				<p class="input_wrapper">
 					<label for="username">Username</label>:
-					<input type="text" name="username" value="" id="username" class="control input" maxlength="24"  />				
-					<p class="input_wrapper center account_error"></p>
+					<?php echo $this->form->username; ?>
 				</p>
 	
 				<p class="input_wrapper">
-					<label for="password">Password</label>:
-					<input type="password" name="password" value="" id="password" class="control input"  />				
-					<p class="input_wrapper center account_error"></p>
+					<label for="password">Password</label>:	
+					<?php echo $this->form->password; ?>
+				</p>
+				
+				<p class="input_wrapper">
+					<label for="confirmPassword">Confirm</label>:
+					<?php echo $this->form->confirm_password; ?>
 				</p>
 	
 				<p class="input_wrapper">
 					<label for="email">Email</label>:
-					<input type="text" name="email" value="" id="email" class="control input" maxlength="160"  />
-					<p class="input_wrapper center account_error"></p>
+					<?php echo $this->form->email; ?>
 				</p>
-	
-				<div class="input_wrapper">
 				
+				<div class="input_wrapper">
+					<?php echo $this->form->ReCaptcha; ?>
 				</div>
 	
 				<p class="input_wrapper">
-					<button name="" type="submit" class="login_submit underlined_dash" >Create my account</button>			
+					<?php echo $this->form->submit; ?>	
 				</p>
 			</form>
 			<p class="input_wrapper center">
 				Already have an account? 
-				<a href="http://alpha.tenbrain.com/account/sign_in" class="blue underlined_dash">Sign in now</a>
+				<a href="/auth/login" class="blue underlined_dash">Sign in now</a>
 			</p>
 		</div>
-		<h3>Sign up with your account from:</h3>
-	
-		<div class="clearfix"></div>
 	</div>
 </body>
 </html>
