--- a/www/css/account.css
+++ b/www/css/account.css
@@ -122,7 +122,11 @@ h2, h3 {
 	background: url('images/grid_loader.gif') no-repeat 0.5em center;
 	text-indent: 20px;
 }
-
+ul.errors li {
+	list-style-type: none;
+	color: red;
+	font-size: 12px;
+}
 /* styles for extjs SuperBoxSelect plugin */
 .x-superboxselect {position:relative; height: auto !important; margin: 0px; overflow: hidden; padding:2px; display:block; outline: none !important;}
 .x-superboxselect input[disabled] {background-color: transparent;};
