using Layout with Auth pages

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -18,7 +18,7 @@
 		<?php if(1): ?>
 			<div class="signed_in_controls">
 				<span class="welcome_message">Welcome, !</span><br />
-				<a class="blue underlined_dash" href="/account/sign_out">Sign out</a>
+				<a class="blue underlined_dash" href="/auth/logout">Sign out</a>
 				<a class="blue underlined_dash" href="/control_panel">Profile</a>
 			</div>
 		<?php else: ?>
