--- a/application/views/scripts/auth/forgot.phtml
+++ b/application/views/scripts/auth/forgot.phtml
@@ -12,6 +12,7 @@
     <?php echo $this->headScript()->appendFile('main.js') ?>
 </head>
 <body>
+<div class="main big_content">
 <div class="reg_form">
 
 		<h2>Forgot your password?</h2>
@@ -44,6 +45,4 @@
 
 		</form>	</div>
 
-
-</body>
-</html>
+</div>
