about and apology pages, erorr handling in selection

--- a/application/views/scripts/selection/results.phtml
+++ b/application/views/scripts/selection/results.phtml
@@ -14,7 +14,7 @@
 	</div>
 	
 	<div class="confirm_dialogue">
-		<a class="control reject_button small" href="<?php echo $this->baseUrl() ?>">Change this</a>
+		<a class="control reject_button small" href="/">Change this</a>
 		<a class="control selection_button small" href="/selection/confirm">Confirm</a>
 	</div>
 	
