menu working in console, not functional yet though

--- a/application/layouts/scripts/control_panel.phtml
+++ b/application/layouts/scripts/control_panel.phtml
@@ -29,6 +29,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="footnote" style="text-align:center"><p>All rights reserved &copy; <?php echo date('Y') ?>, TenBrain</p></div>
+	<?php echo $this->layout()->content ?>
+	<div id="footnote">All rights reserved &copy; <?php echo date('Y') ?>, TenBrain</div>
 </body>
 </html>
