changed auth urls

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -23,9 +23,9 @@
 				<a class="blue underlined_dash" href="/control_panel">Profile</a>
 			</div>
 		<?php else: ?>
-			<a class="blue underlined_dash" href="/account/register">Register</a>
+			<a class="blue underlined_dash" href="/auth/register">Register</a>
 			<span class="login_submit" id="signin_opener">Sign in</span>
-			<form action='/account/login' method="post" accept-charset="utf-8" id="signin_controls">
+			<form action='/auth/login' method="post" accept-charset="utf-8" id="signin_controls">
 				<p class="form_contents small">
 					<label for="username" class="login_label">Username/Email:</label>
 				</p>
