Reworked Facebook/Twitter Auth

--- a/application/views/scripts/auth/register.phtml
+++ b/application/views/scripts/auth/register.phtml
@@ -40,15 +40,15 @@
 	<h3>Sign up with your account from:</h3>
 	<ul class="third_parties">
 		<li class="control third_party big facebook">
-			<a href="/auth/facebookconnect" title="Sign Up with Facebook" class="social">Facebook</a>		
+			<a href="http://alpha.tenbrain.com/account/connect_facebook" title="Sign Up with Facebook" class="social">Facebook</a>		
 		</li>
 	
 		<li class="control third_party big twitter">
-			<a href="/auth/twitterconnect" title="Sign Up with Twitter" class="social">Twitter</a>		
+			<a href="http://alpha.tenbrain.com/account/connect_twitter" title="Sign Up with Twitter" class="social">Twitter</a>		
 		</li>
 	
 		<li class="control third_party big google">
-			<a href="/auth/openidconnect" title="Sign Up with Google" class="social">Google</a>		
+			<a href="http://alpha.tenbrain.com/account/connect_google" title="Sign Up with Google" class="social">Google</a>		
 		</li>
 	</ul>
 	<div class="clearfix"></div>
