--- a/application/views/scripts/auth/profile.phtml
+++ b/application/views/scripts/auth/profile.phtml
@@ -1,3 +1,2 @@
-Welcome <?php echo $this->username;?>, <br />
-This is your profile page<br />
+Welcome, this is your profile page<br />
 <a href="<?php echo $this->url(array('controller' => 'auth', 'action' => 'logout'));?>">click here to logout</a>
