--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -37,13 +37,13 @@
 
 	<ul class="third_parties">
 		<li class="control third_party big facebook">
-			<a href="http://alpha.tenbrain.com/account/connect_facebook" title="Sign In with Facebook" class="social">Facebook</a>		
+			<a href="/auth/facebookconnect" title="Sign In with Facebook" class="social">Facebook</a>		
 		</li>
 		<li class="control third_party big twitter">
-			<a href="http://alpha.tenbrain.com/account/connect_twitter" title="Sign In with Twitter" class="social">Twitter</a>		
+			<a href="/auth/twitterconnect" title="Sign In with Twitter" class="social">Twitter</a>		
 		</li>
 		<li class="control third_party big google">
-			<a href="http://alpha.tenbrain.com/account/connect_google" title="Sign In with Google" class="social">Google</a>
+			<a href="/auth/openidconnect" title="Sign In with Google" class="social">Google</a>
 		</li>
 	</ul>
 
