--- a/application/layouts/scripts/console.phtml
+++ b/application/layouts/scripts/console.phtml
@@ -14,6 +14,7 @@
 	</script>
 
 	<?php echo $this->headScript() ?>
+	<?php $lt = $this->layout() ?>
 
 </head>
 <body>
@@ -21,15 +22,15 @@
 		<a href="/" id="logo">Home</a>
 		<div id="account_area">
 			<div class="signed_in_controls">
-				<span class="welcome_message">Welcome, <?php echo $this->layout()->username ?>!</span>
-				<a class="blue underlined_dash" href="/account/sign_out">Sign out</a><br />
-				<span class="welcome_message">Account type: <?php echo $this->layout()->account_type ?></span>&nbsp;(<a href="#" class="blue underlined_dash" id="account_type_changer">change</a>)
+				<span class="welcome_message">Welcome, <?php echo $lt->username ?>!</span>
+				<a class="blue underlined_dash" href="/auth/logout">Sign out</a><br />
+				<span class="welcome_message">Account type: <?php echo $lt->account_type ?></span>&nbsp;(<a href="#" class="blue underlined_dash" id="account_type_changer">change</a>)
 				
 				<a class="blue underlined_dash" href="#" id="cloud_account_manager">Manage your cloud account</a>
 			</div>
 		</div>
 	</div>
-	<?php echo $this->layout()->content ?>
+	<?php echo $lt->content ?>
 	<h3 id="footnote">All rights reserved &copy; <?php echo date('Y') ?>, TenBrain</h3>
 </body>
 </html>
