Changed 'google auth link' Changed validation message on registration page.

--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -43,7 +43,7 @@
 			<a href="/auth/twitterconnect" title="Sign In with Twitter" class="social">Twitter</a>		
 		</li>
 		<li class="control third_party big google">
-			<a href="/auth/openidconnect" title="Sign In with Google" class="social">Google</a>
+			<a href="/auth/googleconnect" title="Sign In with Google" class="social">Google</a>
 		</li>
 	</ul>
 
