--- a/application/views/scripts/auth/register.phtml
+++ b/application/views/scripts/auth/register.phtml
@@ -43,7 +43,7 @@
 		</li>
 	
 		<li class="control third_party big google">
-			<a href="/auth/openidconnect" title="Sign Up with Google" class="social">Google</a>		
+			<a href="/auth/googleconnect" title="Sign Up with Google" class="social">Google</a>		
 		</li>
 	</ul>
 	<div class="clearfix"></div>
