Do direct payment for Paypal added

--- a/application/views/scripts/paypal/index.phtml
+++ b/application/views/scripts/paypal/index.phtml
@@ -1,1 +1,1 @@
-<div>Buy tenbrain pro account <?php echo $this->CryptedBuyButton?></div>
+<div>Buy tenbrain pro account <pre><?php print_r($this->message)?></pre></div>
