Fixed some bugs Changed urls format

--- a/application/layouts/scripts/console.phtml
+++ b/application/layouts/scripts/console.phtml
@@ -23,7 +23,7 @@
 		<div id="account_area">
 			<div class="signed_in_controls">
 				<span class="welcome_message">Welcome, <?php echo $lt->username ?>!</span>
-				<a class="blue underlined_dash" href="/auth/logout">Sign out</a><br />
+				<a class="blue underlined_dash" href="/account/sign_out">Sign out</a><br />
 				<span class="welcome_message">Account type: <?php echo $lt->account_type ?></span>&nbsp;(<a href="#" class="blue underlined_dash" id="account_type_changer">change</a>)
 				
 				<a class="blue underlined_dash" href="#" id="cloud_account_manager">Manage your cloud account</a>
