--- a/application/views/scripts/paypal/index.phtml
+++ b/application/views/scripts/paypal/index.phtml
@@ -1,1 +1,4 @@
-<div>Buy tenbrain pro account <pre><?php print_r($this->message)?></pre></div>
+<div>Buy tenbrain pro account </div>
+<?php 
+echo $this->form;
+?>
