paypal form update

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -5,6 +5,7 @@
 	<?php echo $this->headTitle() ?>
 	<?php echo $this->headLink()->appendStylesheet('/css/main.css') ?>
 	<?php echo $this->headLink()->appendStylesheet('/css/account.css') ?>
+	<?php echo $this->headLink()->appendStylesheet('/css/paypal.css') ?>
 	<?php echo $this->headScript()->appendFile('/js/jquery-1.4.4.min.js', 'text/javascript') ?>
 	<?php echo $this->headScript()->appendFile('/js/main.js', 'text/javascript') ?>
 	
