paypal module updated

--- a/application/views/scripts/paypal/index.phtml
+++ b/application/views/scripts/paypal/index.phtml
@@ -1,3 +1,4 @@
+<?php echo $this->headLink()->appendStylesheet('/css/paypal.css') ?>
 <h3>Buy account</h3>
 <div align="center">Enter your credit card information</div>
 <?php echo $this->form;
