--- a/application/views/scripts/account/sign-up.phtml
+++ b/application/views/scripts/account/sign-up.phtml
@@ -28,23 +28,25 @@
 		</form>
 		<p class="input_wrapper center">
 			Already have an account? 
-			<a href="/auth/login" class="blue underlined_dash">Sign in now</a>
+			<a href="/account/sign_in" class="blue underlined_dash">Sign in now</a>
 		</p>
 	</div>
 	
 	<h3>Sign up with your account from:</h3>
+	
 	<ul class="third_parties">
 		<li class="control third_party big facebook">
-			<a href="/auth/facebookconnect" title="Sign Up with Facebook" class="social">Facebook</a>		
+			<a href="/account/facebook_connect" title="Sign Up with Facebook" class="social">Facebook</a>		
 		</li>
 	
 		<li class="control third_party big twitter">
-			<a href="/auth/twitterconnect" title="Sign Up with Twitter" class="social">Twitter</a>		
+			<a href="/account/twitter_connect" title="Sign Up with Twitter" class="social">Twitter</a>		
 		</li>
 	
 		<li class="control third_party big google">
-			<a href="/auth/googleconnect" title="Sign Up with Google" class="social">Google</a>		
+			<a href="/account/google_connect" title="Sign Up with Google" class="social">Google</a>		
 		</li>
 	</ul>
+	
 	<div class="clearfix"></div>
 </div>
