--- a/www/css/paypal.css
+++ b/www/css/paypal.css
@@ -4,6 +4,10 @@ form#payment {
 	width: 450px;
 	text-align: left;
 }
+form#payment label{
+	font-size: 0.9em;
+	color: #098ED3;
+}
 form#payment input,
 form#payment select{
 	display: inline-block;
@@ -19,7 +23,7 @@ form#payment ul.errors{
 }
 .text.paypal {
 	display: block;
-	padding: 0.2em 40px;
+	padding: 0.4em 0 0.2em 40px;
 }
 #month-element {
 	float: left;
@@ -34,5 +38,8 @@ form#payment ul.errors{
 }
 .payment.finished{
 	padding: 2em 2em;
+	text-align: center;
+}
+#submit-element{
 	text-align: center;
 }
