--- a/application/views/scripts/pay/details.phtml
+++ b/application/views/scripts/pay/details.phtml
@@ -1,7 +1,9 @@
-<h2>Thanks for using tenbrain</h2>
+<h2>Thanks for using Tenbrain</h2>
 
 <?php if ($this->details){?>
-	<div class="payment finished">Payment operation successfuly finished !</div>
+	<div class="payment finished">Payment operation sucessfully finished !</div>
+	<div class="payment finished link"><a href="/console">Go to control panel.</a></div>
 <?php }else{?>
-	<div class="payment finished">Payment operation faild. Pleace check your credit card details and try again.</div>
+	<div class="payment finished">Payment operation failed. Please check your credit card details and try again.</div>
+	<div class="payment finished link"><a href="/pay">Pay again.</a></div>
 <?php }?>
