frontend changes everything is centered pretty fancy now most commonly used console menu items auto expanded

--- a/application/views/scripts/selection/deployment.phtml
+++ b/application/views/scripts/selection/deployment.phtml
@@ -1,13 +1,17 @@
 <div class="main small_content">
 	<p class="selection_message wide">Choose one of the options below:</p>
-	<div class="selections">
-	<?php foreach($this->selections as $class => $data): ?>
-		<a class="selection_item<?php echo $data['disabled'] ? ' disabled' : '' ?>"
-			href="<?php echo '/' . ($data['disabled'] ? 'apology' : $this->next . '/' . $class) ?>">
-			<span class="selection_image <?php echo $this->type . ' ' . $class ?>">.</span>
-			<span class="control selection_button <?php echo $data['type'] ?>"><?php echo $data['text'] ?></span>
-		</a>
-	<?php endforeach; ?>
+	<div id="selections">
+		<ul>
+		<?php foreach($this->selections as $class => $data): ?>
+			<li>
+				<a class="selection_item<?php echo $data['disabled'] ? ' disabled' : '' ?>"
+					href="<?php echo '/' . ($data['disabled'] ? 'apology' : $this->next . '/' . $class) ?>">
+					<span class="selection_image <?php echo $this->type . ' ' . $class ?>">.</span>
+					<span class="control selection_button <?php echo $data['type'] ?>"><?php echo $data['text'] ?></span>
+					</a>
+			</li>
+		<?php endforeach; ?>
+		</ul>
 	</div>
 	<div class="clearfix"></div>
 </div>
