--- a/www/css/main.css
+++ b/www/css/main.css
@@ -178,19 +178,37 @@ html, body {
 .selection_message.narrow { margin: 0 0 1em; }
 .error_message { margin: 0 0 1em; color: red; }
 
-.selections, .results { margin: 0 auto; }
-.selections { width: 900px; }
-.results { width: 950px; }
+#selections, #confirm_dialogue {
+	float: right;
+	position: relative;
+	left: -50%;
+	text-align: left;
+}
 
-.selection_item {
-	display: block;
+#selections ul, #confirm_dialogue ul {
+	list-style-type: none;
+	position: relative;
+	left: 50%;
+}
+
+#selections li, #confirm_dialogue li {
 	float: left;
-	width: 250px;
-	margin: 2em 25px 5em;
+	position: relative;
+}
+
+.selection_item, .selected_item { width: 250px; }
+.selection_item {
+	margin: 2em 2em 0;
 	text-decoration: none;
 	outline: none;
 }
 .selection_item.disabled { opacity: 0.5; }
+
+#confirm_dialogue a.control.small {
+	float: left;
+	margin: 0 1em;
+}
+
 
 .control {
 	display: block;
@@ -219,10 +237,9 @@ html, body {
 .control.selection_button.big, .control.reject_button.big { font: normal 1.2em/1.2em Verdana, Arial, Sans-Serif; }
 
 .control.arrow {
-	float: left;
 	width: 20px;
 	height: 19px;
-	margin: 3em 4em 0;
+	margin: 3em 1.5em 0;
 	background-position: -178px -71px;
 }
 
@@ -314,10 +331,6 @@ html, body {
 	text-indent: -9999px;
 }
 
-.selected_item {
-	float: left;
-}
-
 .selection_text {
 	font: 20px Verdana, Arial, Sans-Serif;
 	color: #009CDC;
@@ -395,16 +408,6 @@ html, body {
 	text-indent: 1.5em;
 	margin: 1em;
 	overflow-y: auto;
-}
-
-.confirm_dialogue {
-	width: 560px;
-	margin: 2em auto;
-}
-
-.confirm_dialogue a.control.small {
-	float: left;
-	margin: 0 1em;
 }
 
 .social_icon {
