--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -73,14 +73,40 @@
 	<?php echo $lt->content ?>
 	
 	<div id="helper">
-		<span class="help_header"><?php echo isset($lt->short_title) ? $lt->short_title : 'Tips' ?></span>
+		<span class="help_header"><?php echo isset($lt->short_help_title) ? $lt->short_help_title : 'Tips' ?></span>
 		<span class="help_message"><?php echo isset($short_message) ? $short_message : "This is a sample text for a TenBrain help system. Mind it's size - do not put too much text here. If you want to add more help, use the one that dispays in a shaded box. That will be viewed when clicking here." ?></span>
 	</div>
+
+	<?php
+		$lt->big_help_message = "
+<h3>We take the complexity out of Cloud budgeting.</h3>
+
+<p>Tenbrain is a Open Source CccP (Cloud cost controller Platform) company. We manage the cost of provisioning servers in the cloud and enterprise. With Tenbrain, you get more than just a management platform. You get CccP-  Our Cloud Cost Controller Platform - Get rid of the budgeting nightmare of the Cloud, and Save money while Saving your brain.</p>
+
+<b>Three main differentiators from other Cloud PaaS providers:</b>
+
+<h3>CccP - Cloud cost control Platform</h3>  
+
+
+<p>Do you know what it will cost you each moth to deploy to the Cloud? One of the most frustrating and complex parts about the cloud is not how you get stuff running, it’s trying to figure out how much that will cost once you do get it running. With Tenbrains CccP, you no longer need to worry about that. You simply input what your expected monthly budget and Tenbrain takes care of the rest. Tenbrains CccP will automatically select the most competitive Cloud provider to deploy your infrastructure on. Or it will deploy across multiple cloud providers, automatically  integrating your applications stacks- CccP does for Cloud IT budgeting what the Cloud did for the data center.</p>
+
+<h3>TenStacks- Fully integrated Open Source Components.</h3>
+
+
+<p>Deploying Open Source applications can be time consuming. There are options available to deploy open source applications encapsulated in a instance. But this still leaves you with a critical component missing when it comes to enterprise deployments and integration. With Tenstacks, you deploy complete infrastructure stacks that are 100% integrated and 100% Open Source!</p>
+
+<h3>TenAMP- Automation, Monitoring and Provisioning</h3>
+
+
+
+<p>Automated provisioning and management of both your private and public cloud infrastructure. TenAMP management capabilities let you designate user roles, assign provisioning rights and lock down users from deploying machines with a self-services portal that requires approval before someone is able to spin a instance up. Along with our detailed monitoring, alerting and logging capabilities- TenAMP gives you enterprise features in the public Cloud.</p>
+		";
+	?>
 	
 	<div class="overlay back"></div>
-	<div class="overlay front">
-		<span class="help_title"><?php echo isset($lt->big_title) ? $lt->big_title : 'Sample title for big help' ?></span>
-		<span class="help_message"><?php echo isset($lt->big_message) ? $lt->big_message : 'Sample text for big help' ?></span>
+	<div class="overlay front" id="big_helper">
+		<span class="help_title"><?php echo isset($lt->big_help_title) ? $lt->big_help_title : 'Tenbrain Features' ?></span>
+		<span class="help_message"><?php echo isset($lt->big_help_message) ? $lt->big_help_message : 'Sample text for big help' ?></span>
 	</div>
 	
 	<div id="footer_icon_hider"></div>
