footer style changes

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -130,11 +130,39 @@
 			<span class="copyright">All rights reserved &copy; <?php echo date('Y') ?>, TenBrain</span>
 		</div>
 		
-		<div id="menu">
-			<a class="item" href="/about">About us</a>
-			<a class="item" href="/about">Item 2</a>
-			<a class="item" href="/about">Item 3</a>
-		</div>
+		<ul id="menu">
+			<li>
+				<ul>
+					<li>Company</li>
+					<li><a class="item" href="/about">About us</a></li>
+					<li><a class="item" href="/blog">Blog</a></li>
+				</ul>
+			</li>
+			<li>
+				<ul>
+					<li>Products</li>
+					<li><a class="item" href="/">Pricing</a></li>
+					<li><a class="item" href="/">Learn more</a></li>
+					<li><a class="item" href="/">Features</a></li>
+				</ul>
+			</li>
+			<li>
+				<ul>
+					<li>Legal</li>
+					<li><a class="item" href="/">Terms of Service</a></li>
+					<li><a class="item" href="/">Privacy Policy</a></li>
+					<li><a class="item" href="/">Refund Policy</a></li>
+				</ul>
+			</li>
+			<li>
+				<ul>
+					<li><a href="/"></a></li>
+					<li><a href="/"></a></li>
+					<li><a href="/"></a></li>
+					<li><a href="/"></a></li>
+				</ul>
+			</li>
+		</ul>
 	</div>
 </div> <!-- end container -->
 
